Small bug fix with z-index

--- a/styles/prosilver/theme/collapse.css
+++ b/styles/prosilver/theme/collapse.css
@@ -6,7 +6,7 @@
 	margin-top: -21px;
 	position: relative;
 	width: 90%;
-	z-index: 45;
+	z-index: 1;
 }
 
 .collapseactive { background-position: right top;}
